--- a/index.html
+++ b/index.html
@@ -176,49 +176,51 @@
 
     <!-- Container (Portfolio Section) -->
     <div class="w3-content w3-container w3-padding-64" id="portfolio">
-        <h3 class="w3-center">نمونه کارها</h3>
-        <p class="w3-center"><em>در این قسمت تعدادی از نمونه کارهای ما را مشاهده می کنید<br>برای بزرگ شدن عکس روی آن کلیک کنید</em></p><br>
+        <h3 class="w3-center">گروهی از افراد عضو در باشگاه</h3>
+        <p class="w3-center"><em>در این قسمت تعدادی از افراد را که در باشگاه عضو هستند را مشاهده می کنید<br>برای بزرگ شدن عکس روی آن کلیک کنید</em></p><br>
                 
         <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
         <div class="w3-row-padding w3-center">
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="کوه">
+                <img src="sleep (1).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                    alt="کارمندان خسته">
             </div>
 
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="قهوه">
+                <img src="sleep (8).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                    alt="معتادان خسته">
             </div>
 
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="نیما">
+                <img src="sleep (9).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                    alt="دانشجویان خسته">
             </div>
 
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="اقیانوس">
+                <img src="sleep (10).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                    alt="خوابالو های خسته">
             </div>
         </div>
 
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="مه">
+                <img src="sleep (11).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" 
+                     alt="برنامه نویسان خسته">
             </div>
 
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="تایپر">
+                <img src="sleep (12).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                    alt="مردان بیزینس خسته">
             </div>
 
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="قطار">
+                <img src="sleep (13).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                    alt="جنده های خسته">
             </div>
 
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="دریا">
+                <img src="sleep (14).jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" 
+                     alt="خستگاه روی پشت بام">
             </div>
         </div>
     </div>
